<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Darknet Connector</string>
    <string name="main_screen_notconfigured">Please connect to the home network </string>
    <string name="main_screen_connect1">Do you want to make</string>
    <string name="main_screen_connect2">as the home freenet node</string>
    <string name="main_screen_change">Do you want to change your home freenet node to</string>
    <string name="main_screen_configured">In Sync with </string>
    <string name="verify_true">Accept </string>
    <string name="verify_false">Reject </string>
    <string name="exchange">Exchange Nodereference</string>
    <string name="options_title"> Unsynhcronized peers - </string>
    <string name="options_title_no_peers"> No newly added peers </string>
    <string name="menu_settings">Settings</string>
	<string name="exchange_options">Exchange darknet node references via: </string>
	<string name="authorization_text">Do you want to continue? </string>
	<string name="scan_bt"> Scan </string>
	<string name="discover_bt"> Discover. </string>
	<string name="scan_wifi_direct"> Scan </string>
	<string name="discover_wifi_direct"> Discover. </string>
	<string name="wifi"> WIFI </string>
	<string name="QR"> QRCode </string>
	<string name="bluetooth"> Bluetooth </string>
	<string name="prompt"> The app automatically synchronizes the node references when on home network </string>
	<string name="enable_discovery_button"> Make Discoverable </string>
	<string name="wifi_direct_title"> Put title here </string>
	<string name="bluetooth_title"> Put title here </string>
	<string name="img_loading_string"> Please wait, loading </string>
</resources>