<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@id/node_configured_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_dark"
     android:orientation="vertical" >
     <TextView android:id="@id/options_title_unsynced_peers"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/options_title"
	        android:background="#666"
	        android:textColor="#fff"
	        android:paddingLeft="5dp"
	        android:focusable="false"
	    />
	<TextView
          android:id="@id/exchange_options_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:layout_marginTop="20dp"
          android:text="@string/exchange_options"
          android:textColor="@android:color/white"
          android:textSize="22sp" />
	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id = "@id/exchange_options"
	    android:background="@android:color/background_dark"
	    android:gravity="center"
	    android:orientation="vertical" >
	
		<Button
		    android:id="@id/wifi_button"
		    android:layout_width="wrap_content"
		   	android:layout_marginBottom="10dp"
	          	android:layout_marginTop="10dp"
		    android:layout_height="wrap_content"
		    android:focusable="false"
		    android:text="@string/wifi" />
	
	      	<Button
	          	android:id="@id/QR_button"
	          	android:layout_width="wrap_content"
	          	android:layout_height="wrap_content"
	          	android:layout_marginBottom="10dp"
	          	android:layout_marginTop="10dp"
	          	android:left="10dp"
	          	android:focusable="false"
	          	android:text="@string/QR" />
	
	       <Button
	           android:id="@id/bluetooth_button"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	         	android:layout_marginBottom="10dp"
	          	android:layout_marginTop="10dp"
	          	android:focusable="false"
	           android:text="@string/bluetooth" />
	       
	</LinearLayout>
	<TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:layout_marginTop="20dp"
          android:text="@string/prompt"
          android:textColor="@android:color/white"
          android:textSize="15sp" />
  </LinearLayout>