<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FProxyConnector" >

    <Button
        android:id="@id/verify_button_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="42dp"
        android:layout_toLeftOf="@id/verify_button_false"
        android:text="@string/verify_true" />

    <Button
        android:id="@id/verify_button_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="67dp"
        android:text="@string/verify_false" />

    <TextView
        android:id="@+id/main_screen_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/verify_button_true"
        android:layout_alignRight="@id/verify_button_false"
        android:layout_marginBottom="57dp"
        android:text="@string/main_screen_connect1"
        android:textSize="22dp" />

</RelativeLayout>